@@ -1,3 +1,4 @@
+1/19/14 reorganize CustomGraphNode so that order of instantiation in constructor matches order of appearance
 1/19/14 detect and remember the graph ticks that correspond to the min and max pH values
 1/19/14 move 'guide' lines for alignment of scale to the top and bottom ticks of the pH scale
 1/19/14 temporary solution for vertical alignment of graph and pH scales
